--- a/adcord.html
+++ b/adcord.html
@@ -7,9 +7,17 @@
 body {
   font-family: "Poppins", sans-serif;
 }
-    h1 style {
-      color: blue;
+
+body {
+height: 2000px;
+  background: linear-gradient(180deg, #1b1b1c 0%, #454747 30%, #6e7070 50%);
+}  
+
+h1  {
+      color: skyblue;
     }
+    
+
 </style>  
   </head>
   <body>
